// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Regression internal: 1.html 1`] = `
<!DOCTYPE html>
<html lang="ru"
      dir="ltr"
>
  <head>
    <meta charset="utf-8">
    <base href="./">
    <meta name="generator"
          content="Diplodoc Platform vDIPLODOC-VERSION"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1.0"
    >
    <title>
      Title
    </title>
    <style type="text/css">
      body {
                        height: 100vh;
                    }
    </style>
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/search-css-0"
    >
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/app-css-1"
    >
  </head>
  <body class="g-root g-root_theme_light">
    <div id="root">
    </div>
    <script type="application/javascript">
      window.STATIC_CONTENT = false
                   window.__DATA__ = {"data":{"meta":{"metadata":[{"name":"generator","content":"Diplodoc Platform vDIPLODOC-VERSION"}]},"assets":[],"headings":[{"title":"Subtitle","href":"1.html#subtitle","level":2}],"title":"Title","includes":[],"html":"
      <p>Text {{not-var}} {{skip()}} default-var-value
      </p>/n
      <p>Text
      <code>{{not-var}}
      </code>
      <code>{{skip()}}
      </code>
      <code>default-var-value
      </code>
      </p>/n
      <p>Text
      </p>/n/n
      <div class=\\"yfm-clipboard\\">/n
      <pre>
      <code class=\\"hljs\\">{{not-var}}/n/n{{skip()}}/n/ndefault-var-value/n
      </code>
      </pre>/n/n
      <button class=\\"yfm-clipboard-button\\">/n
      <svg width=\\"16\\" height=\\"16\\" viewBox=\\"0 0 24 24\\" class=\\"yfm-clipboard-icon\\" data-animation=\\"9\\">/n
      <path fill=\\"currentColor\\" d=\\"M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z\\">
      </path>/n
      <path stroke=\\"currentColor\\" fill=\\"transparent\\" stroke-width=\\"1.5\\" d=\\"M9.5 13l3 3l5 -5\\" visibility=\\"hidden\\">/n
      <animate id=\\"visibileAnimation-9\\" attributeName=\\"visibility\\" from=\\"hidden\\" to=\\"visible\\" dur=\\"0.2s\\" fill=\\"freeze\\" begin>
      </animate>/n
      <animate id=\\"hideAnimation-9\\" attributeName=\\"visibility\\" from=\\"visible\\" to=\\"hidden\\" dur=\\"1s\\" begin=\\"visibileAnimation-9.end+1\\" fill=\\"freeze\\">
      </animate>/n
      </path>/n
      </svg>/n
      </button>/n
      </div>/n
      <p>
      <code>[not a link](./path/to/relative/file.md)
      </code>
      </p>/n
      <h2 id=\\"subtitle\\">
      <a href=\\"1.html#subtitle\\" class=\\"yfm-anchor\\" aria-hidden=\\"true\\">
      <span class=\\"visually-hidden\\" data-no-index=\\"true\\">Subtitle
      </span>
      </a>Subtitle
      </h2>/n
      <p>
      <a href=\\"mermaid.html\\">Mermaid usage
      </a>
      </p>/n
      <p>
      <a href=\\"mermaid.html#info\\">Mermaid info
      </a>
      </p>/n
      <p>
      <a href=\\"latex.html\\">Latex usage
      </a>
      </p>/n
      <p>Bob
      </p>/n","leading":false},"router":{"pathname":"1","depth":1},"lang":"ru","langs":["ru"]};
    </script>
    <script src="toc.js"
            type="application/javascript"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-0"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/app-js-1"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-2"
    >
    </script>
  </body>
</html>
`;

exports[`Regression internal: 1.md 1`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
---
# Title

Text not_var{{not-var}} not_var{{skip()}} default-var-value

Text \`not_var{{not-var}}\` \`not_var{{skip()}}\` \`default-var-value\`

Text
\`\`\`
not_var{{not-var}}

not_var{{skip()}}

default-var-value
\`\`\`


\`[not a link](./path/to/relative/file.md)\`

## Subtitle {#subtitle}

[{#T}](./mermaid.md)

[{#T}](./mermaid.md#info)

[](./latex.md)

{% include [user](includes/user.md) %}
"
`;

exports[`Regression internal: autotitle.html 1`] = `
<!DOCTYPE html>
<html lang="ru"
      dir="ltr"
>
  <head>
    <meta charset="utf-8">
    <base href="./">
    <meta name="generator"
          content="Diplodoc Platform vDIPLODOC-VERSION"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1.0"
    >
    <title>
      Autotitles
    </title>
    <style type="text/css">
      body {
                        height: 100vh;
                    }
    </style>
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/search-css-0"
    >
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/app-css-1"
    >
  </head>
  <body class="g-root g-root_theme_light">
    <div id="root">
    </div>
    <script type="application/javascript">
      window.STATIC_CONTENT = false
                   window.__DATA__ = {"data":{"meta":{"metadata":[{"name":"generator","content":"Diplodoc Platform vDIPLODOC-VERSION"}]},"assets":[],"headings":[{"title":"Header","href":"autotitle.html#header","level":2}],"title":"Autotitles","includes":[],"html":"
      <p>Empty title
      <br />/n
      <a href=\\"1.html\\">Title
      </a>
      </p>/n
      <p>Empty subtitle
      <br />/n
      <a href=\\"1.html#subtitle\\">Subtitle
      </a>
      </p>/n
      <p>Special title
      <br />/n
      <a href=\\"1.html\\">Title
      </a>
      </p>/n
      <p>Special subtitle
      <br />/n
      <a href=\\"1.html#subtitle\\">Subtitle
      </a>
      </p>/n
      <p>Empty local title
      <br />/n
      <a href=\\"autotitle.html#header\\">Header
      </a>
      </p>/n
      <p>Special local title
      <br />/n
      <a href=\\"autotitle.html#header\\">Header
      </a>
      </p>/n
      <h2 id=\\"header\\">
      <a href=\\"autotitle.html#header\\" class=\\"yfm-anchor\\" aria-hidden=\\"true\\">
      <span class=\\"visually-hidden\\" data-no-index=\\"true\\">Header
      </span>
      </a>Header
      </h2>/n
      <p>Content
      </p>/n","leading":false},"router":{"pathname":"autotitle","depth":1},"lang":"ru","langs":["ru"]};
    </script>
    <script src="toc.js"
            type="application/javascript"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-0"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/app-js-1"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-2"
    >
    </script>
  </body>
</html>
`;

exports[`Regression internal: autotitle.md 1`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
---
# Autotitles

Empty title
[](./1.md)

Empty subtitle
[](./1.md#subtitle)

Special title
[{#T}](./1.md)

Special subtitle
[{#T}](./1.md#subtitle)

Empty local title
[](#header)

Special local title
[{#T}](#header)

## Header {#header}

Content
"
`;

exports[`Regression internal: filelist 1`] = `
"[
  "1.md",
  "_assets/1.png",
  "_assets/2.png",
  "_assets/3.png",
  "_assets/empty.pdf",
  "autotitle.md",
  "images.md",
  "included-item.md",
  "includes.md",
  "includes/test.md",
  "includes/user.md",
  "index.yaml",
  "latex.md",
  "merge/merge.md",
  "merge/merged.md",
  "merge/toc.yaml",
  "mermaid.md",
  "openapi/index.md",
  "openapi/test-controller/getWithPayloadResponse.md",
  "openapi/test-controller/index.md",
  "sub/folder/item-1.md",
  "toc.yaml"
]"
`;

exports[`Regression internal: filelist 2`] = `
"[
  "1.html",
  "_assets/1.png",
  "_assets/2.png",
  "_assets/3.png",
  "_assets/empty.pdf",
  "_bundle/search-async-0",
  "_bundle/app-css-1",
  "_bundle/app-js-1",
  "_bundle/search-css-2",
  "_bundle/latex-extension.css",
  "_bundle/latex-extension.js",
  "_bundle/mermaid-extension.js",
  "_bundle/search-js-0",
  "_bundle/search-js-1",
  "_bundle/search-css-0",
  "_bundle/search-js-2",
  "_bundle/search-css-1",
  "autotitle.html",
  "images.html",
  "included-item.html",
  "includes.html",
  "index.html",
  "latex.html",
  "merge/merge.html",
  "merge/merged.html",
  "merge/toc.js",
  "mermaid.html",
  "openapi/index.html",
  "openapi/test-controller/getWithPayloadResponse.html",
  "openapi/test-controller/index.html",
  "sub/folder/item-1.html",
  "toc.js"
]"
`;

exports[`Regression internal: images.html 1`] = `
<!DOCTYPE html>
<html lang="ru"
      dir="ltr"
>
  <head>
    <meta charset="utf-8">
    <base href="./">
    <meta name="generator"
          content="Diplodoc Platform vDIPLODOC-VERSION"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1.0"
    >
    <title>
      Images
    </title>
    <style type="text/css">
      body {
                        height: 100vh;
                    }
    </style>
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/search-css-0"
    >
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/app-css-1"
    >
  </head>
  <body class="g-root g-root_theme_light">
    <div id="root">
    </div>
    <script type="application/javascript">
      window.STATIC_CONTENT = false
                   window.__DATA__ = {"data":{"meta":{"metadata":[{"name":"generator","content":"Diplodoc Platform vDIPLODOC-VERSION"}]},"assets":[],"headings":[],"title":"Images","includes":[],"html":"
      <p>
      <img src=\\"_assets/1.png\\" alt=\\"simple image\\" />
      </p>/n![with leading comment](_assets/2.png)/n
      <p>
      <img src=\\"_assets/3.png\\" alt=\\"with trailing comment\\" />
      </p>/n/n","leading":false},"router":{"pathname":"images","depth":1},"lang":"ru","langs":["ru"]};
    </script>
    <script src="toc.js"
            type="application/javascript"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-0"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/app-js-1"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-2"
    >
    </script>
  </body>
</html>
`;

exports[`Regression internal: images.md 1`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
---
# Images

![simple image](_assets/1.png)

<!-- comment -->![with leading comment](_assets/2.png)

![with trailing comment](_assets/3.png)<!-- comment -->

<!-- ![commented](_assets/4.png) -->
"
`;

exports[`Regression internal: included-item.html 1`] = `
<!DOCTYPE html>
<html lang="ru"
      dir="ltr"
>
  <head>
    <meta charset="utf-8">
    <base href="./">
    <meta name="generator"
          content="Diplodoc Platform vDIPLODOC-VERSION"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1.0"
    >
    <title>
      Included item
    </title>
    <style type="text/css">
      body {
                        height: 100vh;
                    }
    </style>
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/search-css-0"
    >
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/app-css-1"
    >
  </head>
  <body class="g-root g-root_theme_light">
    <div id="root">
    </div>
    <script type="application/javascript">
      window.STATIC_CONTENT = false
                   window.__DATA__ = {"data":{"meta":{"metadata":[{"name":"generator","content":"Diplodoc Platform vDIPLODOC-VERSION"}]},"assets":[],"headings":[],"title":"Included item","includes":[],"html":"
      <p>Included item text
      </p>/n/n
      <div class=\\"yfm-note yfm-accent-alert\\" note-type=\\"alert\\">
      <p class=\\"yfm-note-title\\">Alert!
      </p>/n
      <div class=\\"yfm-note-content\\">  /n
      </div>
      </div>
      <p>
      <img src=\\"_assets/empty.pdf\\" alt=\\"pdf\\" />
      </p>/n","leading":false},"router":{"pathname":"included-item","depth":1},"lang":"ru","langs":["ru"]};
    </script>
    <script src="toc.js"
            type="application/javascript"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-0"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/app-js-1"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-2"
    >
    </script>
  </body>
</html>
`;

exports[`Regression internal: included-item.md 1`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
---
# Included item

Included item text

<!-- :   {% include [rec-off](./commented-include.md) %} -->

{% note alert "Alert!" %}

  <!-- content -->

{% endnote %}

![pdf](_assets/empty.pdf)
"
`;

exports[`Regression internal: includes.html 1`] = `
<!DOCTYPE html>
<html lang="ru"
      dir="ltr"
>
  <head>
    <meta charset="utf-8">
    <base href="./">
    <meta name="generator"
          content="Diplodoc Platform vDIPLODOC-VERSION"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1.0"
    >
    <title>
    </title>
    <style type="text/css">
      body {
                        height: 100vh;
                    }
    </style>
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/search-css-0"
    >
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/app-css-1"
    >
  </head>
  <body class="g-root g-root_theme_light">
    <div id="root">
    </div>
    <script type="application/javascript">
      window.STATIC_CONTENT = false
                   window.__DATA__ = {"data":{"meta":{"metadata":[{"name":"generator","content":"Diplodoc Platform vDIPLODOC-VERSION"}]},"assets":[],"headings":[],"title":"","includes":[],"html":"
      <p>Text
      </p>/n
      <p>Bob
      </p>/n
      <p>Test
      </p>/n","leading":false},"router":{"pathname":"includes","depth":1},"lang":"ru","langs":["ru"]};
    </script>
    <script src="toc.js"
            type="application/javascript"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-0"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/app-js-1"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-2"
    >
    </script>
  </body>
</html>
`;

exports[`Regression internal: includes.md 1`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
---
Text

{% include [user](includes/user.md) %}

{% include [test](includes/test.md) %}
"
`;

exports[`Regression internal: includes/test.md 1`] = `
"Test
"
`;

exports[`Regression internal: includes/user.md 1`] = `
"Bob
"
`;

exports[`Regression internal: index.html 1`] = `
<!DOCTYPE html>
<html lang="ru"
      dir="ltr"
>
  <head>
    <meta charset="utf-8">
    <base href="./">
    <meta name="generator"
          content="Diplodoc Platform vDIPLODOC-VERSION"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1.0"
    >
    <title>
    </title>
    <style type="text/css">
      body {
                        height: 100vh;
                    }
    </style>
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/search-css-0"
    >
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/app-css-1"
    >
  </head>
  <body class="g-root g-root_theme_light">
    <div id="root">
    </div>
    <script type="application/javascript">
      window.STATIC_CONTENT = false
                   window.__DATA__ = {"data":{"data":{"description":["Some text"],"links":[{"name":"Link 1","href":"1.html"},{"name":"Link 2","href":"1/index.html"}],"meta":{"metadata":[{"name":"generator","content":"Diplodoc Platform vDIPLODOC-VERSION"}]}},"meta":{"metadata":[{"name":"generator","content":"Diplodoc Platform vDIPLODOC-VERSION"}]},"title":"","leading":true},"router":{"pathname":"index","depth":1},"lang":"ru","langs":["ru"]};
    </script>
    <script src="toc.js"
            type="application/javascript"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-0"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/app-js-1"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-2"
    >
    </script>
  </body>
</html>
`;

exports[`Regression internal: index.yaml 1`] = `
"description:
  - Some text
links:
  - name: Link 1
    href: ./1.md
  - name: Link 2
    href: ./1
meta:
  metadata:
    - name: generator
      content: Diplodoc Platform vDIPLODOC-VERSION
"
`;

exports[`Regression internal: latex.html 1`] = `
<!DOCTYPE html>
<html lang="ru"
      dir="ltr"
>
  <head>
    <meta charset="utf-8">
    <base href="./">
    <meta name="generator"
          content="Diplodoc Platform vDIPLODOC-VERSION"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1.0"
    >
    <title>
      Latex usage
    </title>
    <style type="text/css">
      body {
                        height: 100vh;
                    }
    </style>
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/search-css-0"
    >
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/app-css-1"
    >
    <link rel="stylesheet"
          type="text/css"
          href="_bundle/latex-extension.css"
          id="custom-style"
    >
    <script src="_bundle/latex-extension.js">
    </script>
  </head>
  <body class="g-root g-root_theme_light">
    <div id="root">
    </div>
    <script type="application/javascript">
      window.STATIC_CONTENT = false
                   window.__DATA__ = {"data":{"meta":{"metadata":[{"name":"generator","content":"Diplodoc Platform vDIPLODOC-VERSION"}],"style":["_bundle/latex-extension.css"],"script":["_bundle/latex-extension.js"]},"assets":[],"headings":[],"title":"Latex usage","includes":[],"html":"
      <p>
      <span class=\\"yfm-latex\\" data-content=\\"%5Csqrt%7B3x-1%7D%2B(1%2Bx)%5E2\\" data-options=\\"%7B%22displayMode%22%3Afalse%7D\\">
      </span>
      </p>/n","leading":false},"router":{"pathname":"latex","depth":1},"lang":"ru","langs":["ru"]};
    </script>
    <script src="toc.js"
            type="application/javascript"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-0"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/app-js-1"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-2"
    >
    </script>
  </body>
</html>
`;

exports[`Regression internal: latex.md 1`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
---
# Latex usage

$/sqrt{3x-1}+(1+x)^2$
"
`;

exports[`Regression internal: merge/merge.html 1`] = `
<!DOCTYPE html>
<html lang="ru"
      dir="ltr"
>
  <head>
    <meta charset="utf-8">
    <base href="../">
    <meta name="generator"
          content="Diplodoc Platform vDIPLODOC-VERSION"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1.0"
    >
    <title>
      Should use merged item
    </title>
    <style type="text/css">
      body {
                        height: 100vh;
                    }
    </style>
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/search-css-0"
    >
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/app-css-1"
    >
  </head>
  <body class="g-root g-root_theme_light">
    <div id="root">
    </div>
    <script type="application/javascript">
      window.STATIC_CONTENT = false
                   window.__DATA__ = {"data":{"meta":{"metadata":[{"name":"generator","content":"Diplodoc Platform vDIPLODOC-VERSION"}]},"assets":[],"headings":[],"title":"Should use merged item","includes":[],"html":"
      <p>
      <a href=\\"merge/merged.html\\">merged
      </a>
      </p>/n","leading":false},"router":{"pathname":"merge/merge","depth":2},"lang":"ru","langs":["ru"]};
    </script>
    <script src="merge/toc.js"
            type="application/javascript"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-0"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/app-js-1"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-2"
    >
    </script>
  </body>
</html>
`;

exports[`Regression internal: merge/merge.md 1`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
---
# Should use merged item

[merged](./merged.md)
"
`;

exports[`Regression internal: merge/merged.html 1`] = `
<!DOCTYPE html>
<html lang="ru"
      dir="ltr"
>
  <head>
    <meta charset="utf-8">
    <base href="../">
    <meta name="generator"
          content="Diplodoc Platform vDIPLODOC-VERSION"
    >
    <meta name="sourcePath"
          content="merge-source/merged.md"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1.0"
    >
    <title>
      Merged item
    </title>
    <style type="text/css">
      body {
                        height: 100vh;
                    }
    </style>
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/search-css-0"
    >
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/app-css-1"
    >
  </head>
  <body class="g-root g-root_theme_light">
    <div id="root">
    </div>
    <script type="application/javascript">
      window.STATIC_CONTENT = false
                   window.__DATA__ = {"data":{"meta":{"metadata":[{"name":"generator","content":"Diplodoc Platform vDIPLODOC-VERSION"}],"sourcePath":"merge-source/merged.md"},"assets":[],"headings":[],"title":"Merged item","includes":[],"html":"
      <p>Should be linked in toc.yaml
      </p>/n","leading":false},"router":{"pathname":"merge/merged","depth":2},"lang":"ru","langs":["ru"]};
    </script>
    <script src="merge/toc.js"
            type="application/javascript"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-0"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/app-js-1"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-2"
    >
    </script>
  </body>
</html>
`;

exports[`Regression internal: merge/merged.md 1`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
sourcePath: merge-source/merged.md
---
# Merged item

Should be linked in toc.yaml
"
`;

exports[`Regression internal: merge/toc.js 1`] = `"window.__DATA__.data.toc = {"items":[{"name":"Use merged","href":"merge/merge.html","id":"UUID"},{"name":"Merged item","href":"merge/merged.html","id":"UUID"}],"id":"UUID"};"`;

exports[`Regression internal: merge/toc.yaml 1`] = `
"items:
  - name: Use merged
    href: merge.md
  - name: Merged item
    href: merged.md
"
`;

exports[`Regression internal: mermaid.html 1`] = `
<!DOCTYPE html>
<html lang="ru"
      dir="ltr"
>
  <head>
    <meta charset="utf-8">
    <base href="./">
    <meta name="generator"
          content="Diplodoc Platform vDIPLODOC-VERSION"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1.0"
    >
    <title>
      Mermaid usage
    </title>
    <style type="text/css">
      body {
                        height: 100vh;
                    }
    </style>
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/search-css-0"
    >
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/app-css-1"
    >
    <script src="_bundle/mermaid-extension.js">
    </script>
  </head>
  <body class="g-root g-root_theme_light">
    <div id="root">
    </div>
    <script type="application/javascript">
      window.STATIC_CONTENT = false
                   window.__DATA__ = {"data":{"meta":{"metadata":[{"name":"generator","content":"Diplodoc Platform vDIPLODOC-VERSION"}],"script":["_bundle/mermaid-extension.js"]},"assets":[],"headings":[{"title":"Mermaid info","href":"mermaid.html#info","level":2}],"title":"Mermaid usage","includes":[],"html":"
      <div class=\\"mermaid\\" data-content=\\"sequenceDiagram%0A%20%20%20%20%20%20%20%20rect%20rgba(251%2C%20243%2C%20232%2C%200.2)%0A%20%20%20%20%20%20%20%20%20%20%20%20Alice%20-%3E%3E%20Bob%3A%0A%20%20%20%20%20%20%20%20end%0A\\">
      </div>
      <h2 id=\\"info\\">
      <a href=\\"mermaid.html#info\\" class=\\"yfm-anchor\\" aria-hidden=\\"true\\">
      <span class=\\"visually-hidden\\" data-no-index=\\"true\\">Mermaid info
      </span>
      </a>Mermaid info
      </h2>/n
      <p>Some mermaid info
      </p>/n","leading":false},"router":{"pathname":"mermaid","depth":1},"lang":"ru","langs":["ru"]};
    </script>
    <script src="toc.js"
            type="application/javascript"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-0"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/app-js-1"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-2"
    >
    </script>
  </body>
</html>
`;

exports[`Regression internal: mermaid.md 1`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
---
# Mermaid usage

\`\`\`mermaid

  sequenceDiagram
        rect rgba(251, 243, 232, 0.2)
            Alice ->> Bob:
        end
  \`\`\`

## Mermaid info {#info}

Some mermaid info
"
`;

exports[`Regression internal: openapi/index.html 1`] = `
<!DOCTYPE html>
<html lang="ru"
      dir="ltr"
>
  <head>
    <meta charset="utf-8">
    <base href="../">
    <meta name="generator"
          content="Diplodoc Platform vDIPLODOC-VERSION"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1.0"
    >
    <title>
      OpenAPI definition
    </title>
    <style type="text/css">
      body {
                        height: 100vh;
                    }
    </style>
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/search-css-0"
    >
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/app-css-1"
    >
    <link rel="stylesheet"
          type="text/css"
          href="_assets/cut-extension.css"
          id="custom-style"
    >
    <script src="_assets/cut-extension.js">
    </script>
  </head>
  <body class="g-root g-root_theme_light">
    <div id="root">
    </div>
    <script type="application/javascript">
      window.STATIC_CONTENT = false
                   window.__DATA__ = {"data":{"meta":{"metadata":[{"name":"generator","content":"Diplodoc Platform vDIPLODOC-VERSION"}],"style":["_assets/cut-extension.css"],"script":["_assets/cut-extension.js"]},"assets":[],"headings":[{"title":"Sections","href":"openapi/index.html#sections","level":2},{"title":"Specification","href":"openapi/index.html#specification","level":2}],"title":"OpenAPI definition","includes":[],"html":"
      <p>
      <samp>version: v0
      </samp>
      </p>/n
      <h2 id=\\"sections\\">
      <a href=\\"openapi/index.html#sections\\" class=\\"yfm-anchor\\" aria-hidden=\\"true\\">
      <span class=\\"visually-hidden\\" data-no-index=\\"true\\">Sections
      </span>
      </a>Sections
      </h2>/n
      <ul>/n
      <li>
      <a href=\\"openapi/test-controller/index.html\\">test-controller
      </a>
      </li>/n
      </ul>/n
      <h2 id=\\"specification\\">
      <a href=\\"openapi/index.html#specification\\" class=\\"yfm-anchor\\" aria-hidden=\\"true\\">
      <span class=\\"visually-hidden\\" data-no-index=\\"true\\">Specification
      </span>
      </a>Specification
      </h2>/n
      <details class=\\"yfm-cut\\">
      <summary class=\\"yfm-cut-title\\">Open API
      </summary>
      <div class=\\"yfm-cut-content\\">/n
      <div class=\\"yfm-clipboard\\">/n
      <pre>
      <code class=\\"hljs text\\">{/n    \\"openapi\\": \\"3.0.1\\",/n    \\"info\\": {/n        \\"title\\": \\"OpenAPI definition\\",/n        \\"version\\": \\"v0\\"/n    },/n    \\"servers\\": [/n        {/n            \\"url\\": \\"http://localhost:8080\\",/n            \\"description\\": \\"Generated server url\\"/n        }/n    ],/n    \\"paths\\": {/n        \\"/test\\": {/n            \\"get\\": {/n                \\"tags\\": [/n                    \\"test-controller\\"/n                ],/n                \\"summary\\": \\"Simple get operation. тест новой верстки 3\\",/n                \\"description\\": \\"Defines a simple get operation with no inputs and a complex\\",/n                \\"operationId\\": \\"getWithPayloadResponse\\",/n                \\"responses\\": {/n                    \\"200\\": {/n                        \\"description\\": \\"200!!!!\\",/n                        \\"content\\": {/n                            \\"application/json\\": {/n                                \\"schema\\": {/n                                    \\"type\\": \\"object\\",/n                                    \\"properties\\": {/n                                        \\"A\\": {/n                                            \\"type\\": \\"string\\"/n                                        }/n                                    }/n                                }/n                            }/n                        }/n                    }/n                }/n            }/n        }/n    },/n    \\"components\\": {/n        \\"schemas\\": {/n            \\"RecurceTop\\": {/n                \\"type\\": \\"object\\",/n                \\"properties\\": {/n                    \\"A\\": {/n                        \\"type\\": \\"string\\"/n                    }/n                }/n            },/n            \\"RecurceMiddle\\": {/n                \\"type\\": \\"object\\",/n                \\"properties\\": {/n                    \\"B\\": {/n                        \\"type\\": \\"array\\",/n                        \\"items\\": {/n                            \\"type\\": \\"object\\",/n                            \\"properties\\": {/n                                \\"A\\": {/n                                    \\"type\\": \\"string\\"/n                                }/n                            }/n                        }/n                    }/n                }/n            }/n        }/n    }/n}/n
      </code>
      </pre>/n/n
      <button class=\\"yfm-clipboard-button\\">/n
      <svg width=\\"16\\" height=\\"16\\" viewBox=\\"0 0 24 24\\" class=\\"yfm-clipboard-icon\\" data-animation=\\"21\\">/n
      <path fill=\\"currentColor\\" d=\\"M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z\\">
      </path>/n
      <path stroke=\\"currentColor\\" fill=\\"transparent\\" stroke-width=\\"1.5\\" d=\\"M9.5 13l3 3l5 -5\\" visibility=\\"hidden\\">/n
      <animate id=\\"visibileAnimation-21\\" attributeName=\\"visibility\\" from=\\"hidden\\" to=\\"visible\\" dur=\\"0.2s\\" fill=\\"freeze\\" begin>
      </animate>/n
      <animate id=\\"hideAnimation-21\\" attributeName=\\"visibility\\" from=\\"visible\\" to=\\"hidden\\" dur=\\"1s\\" begin=\\"visibileAnimation-21.end+1\\" fill=\\"freeze\\">
      </animate>/n
      </path>/n
      </svg>/n
      </button>/n
      </div>/n
      </div>
      </details>","leading":false},"router":{"pathname":"openapi/index","depth":2},"lang":"ru","langs":["ru"]};
    </script>
    <script src="toc.js"
            type="application/javascript"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-0"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/app-js-1"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-2"
    >
    </script>
  </body>
</html>
`;

exports[`Regression internal: openapi/index.md 1`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
---
# OpenAPI definition

##version: v0##

## Sections

- [test-controller](test-controller/index.md)


## Specification

{% cut "Open API" %}


\`\`\`text translate=no
{
    "openapi": "3.0.1",
    "info": {
        "title": "OpenAPI definition",
        "version": "v0"
    },
    "servers": [
        {
            "url": "http://localhost:8080",
            "description": "Generated server url"
        }
    ],
    "paths": {
        "/test": {
            "get": {
                "tags": [
                    "test-controller"
                ],
                "summary": "Simple get operation. тест новой верстки 3",
                "description": "Defines a simple get operation with no inputs and a complex",
                "operationId": "getWithPayloadResponse",
                "responses": {
                    "200": {
                        "description": "200!!!!",
                        "content": {
                            "application/json": {
                                "schema": {
                                    "type": "object",
                                    "properties": {
                                        "A": {
                                            "type": "string"
                                        }
                                    }
                                }
                            }
                        }
                    }
                }
            }
        }
    },
    "components": {
        "schemas": {
            "RecurceTop": {
                "type": "object",
                "properties": {
                    "A": {
                        "type": "string"
                    }
                }
            },
            "RecurceMiddle": {
                "type": "object",
                "properties": {
                    "B": {
                        "type": "array",
                        "items": {
                            "type": "object",
                            "properties": {
                                "A": {
                                    "type": "string"
                                }
                            }
                        }
                    }
                }
            }
        }
    }
}
\`\`\`


{% endcut %}

<!-- markdownlint-disable-file -->"
`;

exports[`Regression internal: openapi/test-controller/getWithPayloadResponse.html 1`] = `
<!DOCTYPE html>
<html lang="ru"
      dir="ltr"
>
  <head>
    <meta charset="utf-8">
    <base href="../../">
    <meta name="generator"
          content="Diplodoc Platform vDIPLODOC-VERSION"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1.0"
    >
    <title>
    </title>
    <style type="text/css">
      body {
                        height: 100vh;
                    }
    </style>
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/search-css-0"
    >
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/app-css-1"
    >
    <link rel="stylesheet"
          type="text/css"
          href="_assets/cut-extension.css"
          id="custom-style"
    >
    <script src="_assets/cut-extension.js">
    </script>
  </head>
  <body class="g-root g-root_theme_light">
    <div id="root">
    </div>
    <script type="application/javascript">
      window.STATIC_CONTENT = false
                   window.__DATA__ = {"data":{"meta":{"metadata":[{"name":"generator","content":"Diplodoc Platform vDIPLODOC-VERSION"}],"style":["_assets/cut-extension.css"],"script":["_assets/cut-extension.js"]},"assets":[],"headings":[{"title":"Request","href":"openapi/test-controller/getWithPayloadResponse.html#request","level":2},{"title":"Responses","href":"openapi/test-controller/getWithPayloadResponse.html#responses","level":2},{"title":"200 OK","href":"openapi/test-controller/getWithPayloadResponse.html#200-ok","level":2,"items":[{"title":"Body","href":"openapi/test-controller/getWithPayloadResponse.html#body","level":3}]}],"title":"","includes":[],"html":"
      <div class=\\"openapi\\">/n
      <h1>Simple get operation. тест новой верстки 3
      </h1>/n
      <p>Defines a simple get operation with no inputs and a complex
      </p>/n
      <h2 id=\\"request\\">
      <a href=\\"openapi/test-controller/getWithPayloadResponse.html#request\\" class=\\"yfm-anchor\\" aria-hidden=\\"true\\">
      <span class=\\"visually-hidden\\" data-no-index=\\"true\\">Request
      </span>
      </a>Request
      </h2>/n
      <div class=\\"openapi__requests\\">/n
      <div class=\\"openapi__request__wrapper\\" style=\\"--method:var(--dc-openapi-methods-get);margin-bottom:12px\\">/n
      <div class=\\"openapi__request\\">/n
      <p class=\\"openapi__method\\">GET
      </p>/n/n
      <div class=\\"yfm-clipboard\\">/n
      <pre>
      <code class=\\"hljs text\\">http://localhost:8080/test/n
      </code>
      </pre>/n/n
      <button class=\\"yfm-clipboard-button\\">/n
      <svg width=\\"16\\" height=\\"16\\" viewBox=\\"0 0 24 24\\" class=\\"yfm-clipboard-icon\\" data-animation=\\"16\\">/n
      <path fill=\\"currentColor\\" d=\\"M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z\\">
      </path>/n
      <path stroke=\\"currentColor\\" fill=\\"transparent\\" stroke-width=\\"1.5\\" d=\\"M9.5 13l3 3l5 -5\\" visibility=\\"hidden\\">/n
      <animate id=\\"visibileAnimation-16\\" attributeName=\\"visibility\\" from=\\"hidden\\" to=\\"visible\\" dur=\\"0.2s\\" fill=\\"freeze\\" begin>
      </animate>/n
      <animate id=\\"hideAnimation-16\\" attributeName=\\"visibility\\" from=\\"visible\\" to=\\"hidden\\" dur=\\"1s\\" begin=\\"visibileAnimation-16.end+1\\" fill=\\"freeze\\">
      </animate>/n
      </path>/n
      </svg>/n
      </button>/n
      </div>/n
      </div>/n
      <p>Generated server url
      </p>/n
      </div>/n
      </div>/n
      <h2 id=\\"responses\\">
      <a href=\\"openapi/test-controller/getWithPayloadResponse.html#responses\\" class=\\"yfm-anchor\\" aria-hidden=\\"true\\">
      <span class=\\"visually-hidden\\" data-no-index=\\"true\\">Responses
      </span>
      </a>Responses
      </h2>/n
      <div class=\\"openapi__response__code__200\\">/n
      <h2 id=\\"200-ok\\">
      <a href=\\"openapi/test-controller/getWithPayloadResponse.html#200-ok\\" class=\\"yfm-anchor\\" aria-hidden=\\"true\\">
      <span class=\\"visually-hidden\\" data-no-index=\\"true\\">200 OK
      </span>
      </a>200 OK
      </h2>/n
      <p>200!!!!
      </p>/n
      <div class=\\"openapi-entity\\">/n
      <h3 id=\\"body\\">
      <a href=\\"openapi/test-controller/getWithPayloadResponse.html#body\\" class=\\"yfm-anchor\\" aria-hidden=\\"true\\">
      <span class=\\"visually-hidden\\" data-no-index=\\"true\\">Body
      </span>
      </a>Body
      </h3>/n
      <details class=\\"yfm-cut\\">
      <summary class=\\"yfm-cut-title\\">application/json
      </summary>
      <div class=\\"yfm-cut-content\\">/n
      <div class=\\"yfm-clipboard\\">/n
      <pre>
      <code class=\\"hljs json\\">
      <span class=\\"hljs-punctuation\\">{
      </span>/n
      <span class=\\"hljs-attr\\">\\"A\\"
      </span>
      <span class=\\"hljs-punctuation\\">:
      </span>
      <span class=\\"hljs-string\\">\\"string\\"
      </span>/n
      <span class=\\"hljs-punctuation\\">}
      </span>/n
      </code>
      </pre>/n/n
      <button class=\\"yfm-clipboard-button\\">/n
      <svg width=\\"16\\" height=\\"16\\" viewBox=\\"0 0 24 24\\" class=\\"yfm-clipboard-icon\\" data-animation=\\"42\\">/n
      <path fill=\\"currentColor\\" d=\\"M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z\\">
      </path>/n
      <path stroke=\\"currentColor\\" fill=\\"transparent\\" stroke-width=\\"1.5\\" d=\\"M9.5 13l3 3l5 -5\\" visibility=\\"hidden\\">/n
      <animate id=\\"visibileAnimation-42\\" attributeName=\\"visibility\\" from=\\"hidden\\" to=\\"visible\\" dur=\\"0.2s\\" fill=\\"freeze\\" begin>
      </animate>/n
      <animate id=\\"hideAnimation-42\\" attributeName=\\"visibility\\" from=\\"visible\\" to=\\"hidden\\" dur=\\"1s\\" begin=\\"visibileAnimation-42.end+1\\" fill=\\"freeze\\">
      </animate>/n
      </path>/n
      </svg>/n
      </button>/n
      </div>/n
      </div>
      </details>
      <table>/n
      <tbody>/n
      <tr>/n
      <td>/n
      <p>
      <strong>Name
      </strong>
      </p>/n
      </td>/n
      <td>/n
      <p>
      <strong>Description
      </strong>
      </p>/n
      </td>/n
      </tr>/n
      <tr>/n
      <td class=\\"openapi-table-parameter-name\\">/n
      <p>A
      </p>/n
      </td>/n
      <td>/n
      <p>
      <strong>Type:
      </strong> string
      </p>/n
      </td>/n
      </tr>/n
      </tbody>/n
      </table>/n
      </div>/n
      </div>/n/n
      </div>/n
      <template id=\\":Deprecated_template\\" label=\\"Deprecated\\">
      <dfn class=\\"yfm yfm-term_dfn\\" id=\\":Deprecated_element\\" role=\\"dialog\\">
      <p>No longer supported, please use an alternative and newer version.
      </p>/n
      </dfn>
      </template>","leading":false},"router":{"pathname":"openapi/test-controller/getWithPayloadResponse","depth":3},"lang":"ru","langs":["ru"]};
    </script>
    <script src="toc.js"
            type="application/javascript"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-0"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/app-js-1"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-2"
    >
    </script>
  </body>
</html>
`;

exports[`Regression internal: openapi/test-controller/getWithPayloadResponse.md 1`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
---
<div class="openapi">

# Simple get operation. тест новой верстки 3

Defines a simple get operation with no inputs and a complex

## Request

<div class="openapi__requests">

<div class="openapi__request__wrapper" style="--method: var(--dc-openapi-methods-get);margin-bottom: 12px">

<div class="openapi__request">

GET {.openapi__method} 
\`\`\`text translate=no
http://localhost:8080/test
\`\`\`



</div>

Generated server url

</div>

</div>

## Responses

<div class="openapi__response__code__200">

## 200 OK

200!!!!

<div class="openapi-entity">

### Body

{% cut "application/json" %}


\`\`\`json translate=no
{
    "A": "string"
}
\`\`\`


{% endcut %}


#|||
 **Name** 
|
 **Description** 
||

||
 A {.openapi-table-parameter-name} 
|
 **Type:** string 
|||#

</div>

</div>
<!-- markdownlint-disable-file -->

</div>



[*Deprecated]: No longer supported, please use an alternative and newer version."
`;

exports[`Regression internal: openapi/test-controller/index.html 1`] = `
<!DOCTYPE html>
<html lang="ru"
      dir="ltr"
>
  <head>
    <meta charset="utf-8">
    <base href="../../">
    <meta name="generator"
          content="Diplodoc Platform vDIPLODOC-VERSION"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1.0"
    >
    <title>
      test-controller
    </title>
    <style type="text/css">
      body {
                        height: 100vh;
                    }
    </style>
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/search-css-0"
    >
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/app-css-1"
    >
  </head>
  <body class="g-root g-root_theme_light">
    <div id="root">
    </div>
    <script type="application/javascript">
      window.STATIC_CONTENT = false
                   window.__DATA__ = {"data":{"meta":{"metadata":[{"name":"generator","content":"Diplodoc Platform vDIPLODOC-VERSION"}]},"assets":[],"headings":[{"title":"Endpoints","href":"openapi/test-controller/index.html#endpoints","level":2}],"title":"test-controller","includes":[],"html":"
      <h2 id=\\"endpoints\\">
      <a href=\\"openapi/test-controller/index.html#endpoints\\" class=\\"yfm-anchor\\" aria-hidden=\\"true\\">
      <span class=\\"visually-hidden\\" data-no-index=\\"true\\">Endpoints
      </span>
      </a>Endpoints
      </h2>/n
      <ul>/n
      <li>
      <a href=\\"openapi/test-controller/getWithPayloadResponse.html\\">Simple get operation. тест новой верстки 3
      </a>
      </li>/n
      </ul>/n","leading":false},"router":{"pathname":"openapi/test-controller/index","depth":3},"lang":"ru","langs":["ru"]};
    </script>
    <script src="toc.js"
            type="application/javascript"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-0"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/app-js-1"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-2"
    >
    </script>
  </body>
</html>
`;

exports[`Regression internal: openapi/test-controller/index.md 1`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
---
# test-controller

## Endpoints

- [Simple get operation. тест новой верстки 3](getWithPayloadResponse.md)

<!-- markdownlint-disable-file -->"
`;

exports[`Regression internal: sub/folder/item-1.html 1`] = `
<!DOCTYPE html>
<html lang="ru"
      dir="ltr"
>
  <head>
    <meta charset="utf-8">
    <base href="../../">
    <meta name="generator"
          content="Diplodoc Platform vDIPLODOC-VERSION"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1.0"
    >
    <title>
      Item 1
    </title>
    <style type="text/css">
      body {
                        height: 100vh;
                    }
    </style>
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/search-css-0"
    >
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/app-css-1"
    >
  </head>
  <body class="g-root g-root_theme_light">
    <div id="root">
    </div>
    <script type="application/javascript">
      window.STATIC_CONTENT = false
                   window.__DATA__ = {"data":{"meta":{"metadata":[{"name":"generator","content":"Diplodoc Platform vDIPLODOC-VERSION"}]},"assets":[],"headings":[],"title":"Item 1","includes":[],"html":"
      <p>Item 1 text
      </p>/n","leading":false},"router":{"pathname":"sub/folder/item-1","depth":3},"lang":"ru","langs":["ru"]};
    </script>
    <script src="toc.js"
            type="application/javascript"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-0"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/app-js-1"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-2"
    >
    </script>
  </body>
</html>
`;

exports[`Regression internal: sub/folder/item-1.md 1`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
---
# Item 1

Item 1 text
"
`;

exports[`Regression internal: toc.js 1`] = `"window.__DATA__.data.toc = {"items":[{"name":"Verbose root (index.yaml) will be transformed to index.html","href":"index.html","id":"UUID"},{"name":"Root will be transformed to index.html","href":"index.html","id":"UUID"},{"name":"Md item with not_var syntax","href":"1.html","id":"UUID"},{"name":"Md item named without extension","href":"1.html","id":"UUID"},{"name":"Item with empty href","id":"UUID"},{"name":"Included Item","href":"included-item.html","id":"UUID"},{"name":"Named include (items is Object here - this is not an error)","items":[{"name":"Item 1","href":"sub/folder/item-1.html","id":"UUID"}],"id":"UUID"},{"name":"Mermaid","href":"mermaid.html","id":"UUID"},{"name":"Latex","href":"latex.html","id":"UUID"},{"name":"Images","href":"images.html","id":"UUID"},{"name":"Autotitle","href":"autotitle.html","id":"UUID"},{"name":"includes","href":"includes.html","id":"UUID"},{"name":"openapi","items":[{"name":"Overview","href":"openapi/index.html","id":"UUID"},{"name":"test-controller","items":[{"name":"Overview","href":"openapi/test-controller/index.html","id":"UUID"},{"href":"openapi/test-controller/getWithPayloadResponse.html","name":"Simple get operation. тест новой верстки 3","id":"UUID"}],"id":"UUID"}],"id":"UUID"}],"id":"UUID"};"`;

exports[`Regression internal: toc.yaml 1`] = `
"items:
  - name: Verbose root (index.yaml) will be transformed to index.html
    href: index.yaml
  - name: Root will be transformed to index.html
    href: /index.yaml
  - name: Md item with not_var syntax
    href: 1.md
  - name: Md item named without extension
    href: 1.md
  - name: Item with empty href
  - name: Included Item
    href: included-item.md
  - name: Named include (items is Object here - this is not an error)
    items:
      - name: Item 1
        href: sub/folder/item-1.md
  - name: Mermaid
    href: mermaid.md
  - name: Latex
    href: latex.md
  - name: Images
    href: images.md
  - name: Autotitle
    href: autotitle.md
  - name: includes
    href: includes.md
  - name: openapi
    items:
      - name: Overview
        href: openapi/index.md
      - name: test-controller
        items:
          - name: Overview
            href: openapi/test-controller/index.md
          - href: openapi/test-controller/getWithPayloadResponse.md
            name: Simple get operation. тест новой верстки 3
"
`;
